--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "tdk-boilerplate",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "ts-node src"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "typescript": "^4.6.4"
+    "start": "node src"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.0.1",
     "express": "^4.18.0"
   }
 }
