--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "chalk": "^5.0.1",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "mime-types": "^2.1.35"
   }
 }
