Restructuring the boilerplate project

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server/server.js"
   },
   "dependencies": {
     "chalk": "^5.0.1",
